[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Art Assets/Logos and Names/umi_and_candy_hd_1_upscale.png" type="Texture" id=2]
[ext_resource path="res://Art Assets/Menus/Title Screen/Backgrounds/Blue Checker Scroll/Spritesheets/Umi_Background_Upscale_Fix.png" type="Texture" id=3]
[ext_resource path="res://Fonts/PixelifySans-Medium.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Art Assets/Menus/Title Screen/Backgrounds/Large Black Spikey Label/Title_Screen_Label_Upscale.png" type="Texture" id=5]
[ext_resource path="res://Art Assets/Logos and Names/BSG_Logo.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Scroll"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=7]
resource_name = "BlackLabel"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=8]
resource_name = "BlackLabel"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="DynamicFont" id=2]
size = 25
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_space = 1
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 25
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 25
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 25
outline_size = 2
outline_color = Color( 0.380392, 0.376471, 0.372549, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 25
outline_size = 2
outline_color = Color( 0.196078, 0, 1, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 25
outline_size = 2
outline_color = Color( 1, 0, 0.960784, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
size = 25
outline_size = 2
outline_color = Color( 0.0784314, 0.529412, 0.0235294, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=11]
size = 35
outline_size = 2
outline_color = Color( 0.580392, 0, 1, 1 )
font_data = ExtResource( 4 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="BlueCheckerBG" type="Sprite" parent="Node2D"]
position = Vector2( -4, -39 )
scale = Vector2( 0.854, 0.854 )
texture = ExtResource( 3 )
centered = false
vframes = 4

[node name="BlueCheckerBGAnim" type="AnimationPlayer" parent="Node2D/BlueCheckerBG"]
autoplay = "Scroll"
anims/Scroll = SubResource( 1 )

[node name="LeftBlackLabel" type="Sprite" parent="Node2D"]
position = Vector2( -206, -77 )
texture = ExtResource( 5 )
centered = false
vframes = 4
frame = 1

[node name="LeftBlackLabelAnim" type="AnimationPlayer" parent="Node2D/LeftBlackLabel"]
autoplay = "BlackLabel"
anims/BlackLabel = SubResource( 7 )

[node name="RightBlackLabel" type="Sprite" parent="Node2D"]
position = Vector2( -134, -81 )
texture = ExtResource( 5 )
centered = false
flip_h = true
vframes = 4

[node name="RightBlackLabelAnim" type="AnimationPlayer" parent="Node2D/RightBlackLabel"]
autoplay = "BlackLabel"
anims/BlackLabel = SubResource( 8 )

[node name="StartButton" type="Button" parent="."]
margin_left = 429.0
margin_top = 399.0
margin_right = 594.0
margin_bottom = 448.0
custom_fonts/font = SubResource( 2 )
text = "Start Game"
flat = true

[node name="OptionsButton" type="Button" parent="."]
margin_left = 426.0
margin_top = 456.0
margin_right = 590.0
margin_bottom = 505.0
custom_fonts/font = SubResource( 3 )
text = "Options"
flat = true

[node name="CloseButton" type="Button" parent="."]
margin_left = 429.0
margin_top = 514.0
margin_right = 593.0
margin_bottom = 563.0
custom_fonts/font = SubResource( 4 )
text = "Close Game"
flat = true

[node name="Credits" type="Button" parent="."]
margin_left = 877.0
margin_top = 546.0
margin_right = 1014.0
margin_bottom = 588.0
rect_pivot_offset = Vector2( -333, -37 )
custom_fonts/font = SubResource( 5 )
text = "Credits"
flat = true

[node name="Discord" type="Button" parent="."]
margin_left = 879.0
margin_top = 421.0
margin_right = 1016.0
margin_bottom = 463.0
rect_pivot_offset = Vector2( -535, 21 )
custom_fonts/font = SubResource( 6 )
text = "Discord"
flat = true

[node name="Twitter" type="Button" parent="."]
margin_left = 882.0
margin_top = 464.0
margin_right = 1004.0
margin_bottom = 500.0
custom_fonts/font = SubResource( 9 )
text = "Twitter"
flat = true

[node name="Itchio" type="Button" parent="."]
margin_left = 902.0
margin_top = 507.0
margin_right = 1001.0
margin_bottom = 543.0
custom_fonts/font = SubResource( 10 )
text = "Itch.io"
flat = true

[node name="LogoUpscale" type="Sprite" parent="."]
position = Vector2( 494, 180 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="BSGLogo" type="Sprite" parent="."]
position = Vector2( 61, 549 )
scale = Vector2( 0.035, 0.035 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="."]
margin_left = 409.0
margin_top = 292.0
margin_right = 619.0
margin_bottom = 335.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 11 )
text = "Demo Zero"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_editor_description_": "
"
}

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Discord" to="." method="_on_Discord_pressed"]
[connection signal="pressed" from="Twitter" to="." method="_on_Twitter_pressed"]
[connection signal="pressed" from="Itchio" to="." method="_on_Itchio_pressed"]
